--- a/app/styles/header.scss
+++ b/app/styles/header.scss
@@ -70,11 +70,12 @@ button.meow {
   border: 1px solid #4E4E4E;
   border-radius: 3px;
   color: white;
+  height: 40px;
   padding: 7px 20px;
   font-size: 15px;
   outline: none !important;
   float: right;
-  margin-top: 11px;
+  margin-top: 5px;
   margin-left: 15px;
   &:hover {
     background-color: #A9ABAC;
