--- a/app/templates/components/cat-detail.hbs
+++ b/app/templates/components/cat-detail.hbs
@@ -1,4 +1,4 @@
-<img class="picture {{if cat.dead 'dead'}}" src={{pictureUrl}}/>
+<img class="picture {{if cat.dead 'dead'}}" src={{cat.picture}}/>
 <div class="info">
   <span class={{if cat.dead 'dead'}}>
     <span>{{cat.name}}</span>
