--- a/app/templates/profile/cats.hbs
+++ b/app/templates/profile/cats.hbs
@@ -1,3 +1,5 @@
 <main>
-  {{cat-list cats=model onRevive=(action "onRevive") onTrash=(action "onTrash")}}
-</main>
+  {{pet-list pets=model onRevive=(action "onRevive") onTrash=(action "onTrash")}}
+{{!--   {{cat-list cats=model onRevive=(action "onRevive") onTrash=(action "onTrash")}}
+ --}}
+ </main>
