--- a/app/styles/components/meow-add.scss
+++ b/app/styles/components/meow-add.scss
@@ -15,7 +15,7 @@
     color: #9E9E9E;
     margin-top: -4px;
     outline: none !important;
-    width: calc(100% - 55px);
+    width: 73%;
     margin-left: 8px;
     text-align: left;
     position: relative;
@@ -43,6 +43,24 @@
       border-right-color: rgba(0, 0, 0, 0.11);
       border-width: 6px;
       margin-top: -6px;
+    }
+  }
+
+  button.meow {
+    background-color: #666;
+    border: 1px solid #4E4E4E;
+    border-radius: 3px;
+    color: white;
+    height: 40px;
+    padding: 7px 20px;
+    font-size: 15px;
+    outline: none !important;
+    float: right;
+    margin-top: auto;
+    margin-left: 15px;
+    &:hover {
+      background-color: #A9ABAC;
+      color: white;
     }
   }
 }
