--- a/app/templates/components/meow-add.hbs
+++ b/app/templates/components/meow-add.hbs
@@ -1,2 +1,2 @@
 <img class="avatar" src={{avatarUrl}}/>
-<button class="card bubble">Tell us about your cat!</button>
+<input class="card bubble" placeholder="Tell us about your cat!"/><button class="meow">Meow</button>
