--- a/app/templates/profile.hbs
+++ b/app/templates/profile.hbs
@@ -15,6 +15,11 @@
         <p>{{model.user.cats.length}}</p>
       {{/link-to}}
 
+      {{!-- {{#link-to "profile.dogs" tagName="li" id="link-dogs"}}
+        <h4>Dogs</h4>
+        <p>{{model.user.dogs.length}}</p>
+      {{/link-to}} --}}
+
       <li>
         <h4>Following</h4>
         <p>{{model.user.following.length}}</p>
