--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -8,7 +8,6 @@
     <img class="avatar" src={{model.user.avatar}}/>
     <input class="meow-input card bubble" placeholder="Tell us about your cat!"/><button class="meow" {{action (action "meow")}}>Meow</button>
   </div>
-{{!--     {{meow-add user=model.user}}
- --}}    {{meow-list meows=model.meows}}
+ {{meow-list meows=model.meows}}
   </main>
 </div>
