--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,8 +1,8 @@
 <div class="page-container index">
 
   <div class="text-wrapper">
-    <h1>Welcome to ScagTree.</h1>
-    <p class="tagline">Built with Ember.js to tell everyone about your cats</p>
+    <h1>Welcome to a <i>better</i> ScagTree.</h1>
+    <p class="tagline">Built with Ember.js to tell everyone about your cats and <b><u>more</u></b>.</p>
   </div>
 
   <div class="login-box">
@@ -16,5 +16,4 @@
     <button class="signup">Sign up</button>
     <button class="login" {{action (action 'login')}}>Log in</button>
   </div>
-
 </div>
